--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,59 @@
-p {
-  color: blue;
+body {
+  height: 100vh;
+  font-family:400 20px 'Open Sans', sans-serif;
+}
+
+.user-input-section {
+  display:inline-block;
+  height: 50%;
+  width:100%;
+  text-align: center;
+  padding: 0;
+  padding-top: 20px;
+  position: relative;
+  top: 50%;
+  background-color: #E5F3F2;
+}
+
+body h1 {
+  color:#00A79D;
+  font-family:700 35px 'Roboto Slab', serif;
+  margin: 15px auto;
+}
+
+.title-user-input{
+  box-sizing: border-box;
+  display: block;
+  margin: auto;
+  padding: 5px 0 0 5px;
+  text-align: left;
+  width: 25%;
+}
+
+.body-user-input{
+  width: 25%;
+  box-sizing: border-box;
+  display: block;
+  margin: 15px auto;
+  padding: 5px 0 40px 5px;
+  text-align: left;
+}
+
+span{
+  color:#6D6E71;
+}
+
+.save-btn{
+  display: block;
+  width: 25%;
+  background-color: #00A79D;
+  border: none;
+  button: active;
+  color: #FFFFFF;
+  margin: 15px auto;
+  outline: none;
+}
+
+.save-btn:hover {
+  background-color: #045E55;
 }
