--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,128 @@
-p {
-  color: blue;
+/******************
+    GENERAL
+******************/
+
+*:focus{
+  outline: none;
+}
+
+body {
+  height: 100vh;
+  font-family:400 20px 'Open Sans', sans-serif;
+}
+
+/******************
+    LOGO
+******************/
+
+body h1 {
+  color:#00A79D;
+  font-family:700 35px 'Roboto Slab', serif;
+  margin: 15px auto;
+}
+
+
+/******************
+    INPUT SECTION
+******************/
+
+.user-input-section {
+  display:inline-block;
+  height: 50%;
+  width:100%;
+  text-align: center;
+  padding: 0;
+  padding-top: 20px;
+  position: relative;
+  top: 50%;
+  background-color: #E5F3F2;
+}
+
+
+.title-user-input{
+  box-sizing: border-box;
+  display: block;
+  margin: auto;
+  padding: 5px 0 0 5px;
+  text-align: left;
+  width: 25%;
+}
+
+.body-user-input{
+  width: 25%;
+  box-sizing: border-box;
+  display: block;
+  margin: 15px auto;
+  padding: 5px 0 40px 5px;
+  text-align: left;
+}
+
+span{
+  color:#6D6E71;
+}
+
+.save-btn{
+  display: block;
+  width: 25%;
+  background-color: #00A79D;
+  border: none;
+  button: active;
+  color: #FFFFFF;
+  margin: 15px auto;
+  outline: none;
+}
+
+.save-btn:hover {
+  background-color: #045E55;
+}
+
+/******************
+    IDEA SECTION
+******************/
+
+.idea * {
+  margin: 0 0 15px 0;
+}
+
+.idea {
+  position: relative;
+  border-bottom: 2px #d1d3d4 solid;
+  margin: 18px auto;
+  width: 83%;
+}
+
+.search-input {
+  margin: 19px auto;
+  display: block;
+  padding: 5px;
+}
+
+.rating {
+  display: inline-block;
+  align-self: center;
+}
+
+/******buttons******/
+
+.up-vote-btn, .down-vote-btn, .delete-btn {
+  background-repeat: no-repeat;
+  height: 30px;
+  width: 30px;
+  background-color: transparent;
+  border: none;
+}
+
+.delete-btn {
+  position: absolute;
+  top: 0;
+  right: 0;
+  background-image: url(../icons/delete.svg);
+}
+
+.up-vote-btn{
+  background-image: url(../icons/upvote.svg);
+}
+
+.down-vote-btn {
+  background-image: url(../icons/downvote.svg);
 }
