--- a/css/styles.css
+++ b/css/styles.css
@@ -1,23 +1,19 @@
 body {
-  height: 100vh;
-  font-family:400 20px 'Open Sans', sans-serif;
+  font-family:'Open Sans', sans-serif;
 }
 
 .user-input-section {
   display:inline-block;
   height: 50%;
-  width:100%;
+  width:83%;
   text-align: center;
-  padding: 0;
-  padding-top: 20px;
-  position: relative;
-  top: 50%;
   background-color: #E5F3F2;
+  margin: 18px auto;
 }
 
 body h1 {
   color:#00A79D;
-  font-family:700 35px 'Roboto Slab', serif;
+  font-family:'Roboto Slab', serif;
   margin: 15px auto;
 }
 
@@ -27,11 +23,11 @@ body h1 {
   margin: auto;
   padding: 5px 0 0 5px;
   text-align: left;
-  width: 25%;
+  width: 88%;
 }
 
 .body-user-input{
-  width: 25%;
+  width: 88%;
   box-sizing: border-box;
   display: block;
   margin: 15px auto;
@@ -45,13 +41,14 @@ span{
 
 .save-btn{
   display: block;
-  width: 25%;
+  width: 88%;
   background-color: #00A79D;
   border: none;
-  button: active;
+  /*button: active;*/
   color: #FFFFFF;
   margin: 15px auto;
   outline: none;
+  padding: 9px;
 }
 
 .save-btn:hover {
