--- a/css/styles.css
+++ b/css/styles.css
@@ -40,12 +40,13 @@ body h1 {
 
 .input{
   width: 88%;
-  padding: 5px 0 0 5px;
+  max-width: 800px;
+  padding: 5px 0 4px 5px;
   text-align: left;
   box-sizing: border-box;
   display: block;
   margin: 17px auto;
-  border: 1px #D1D3D4 solid;
+  border: 2px #D1D3D4 solid;
 }
 
 .body-user-input{
@@ -59,12 +60,14 @@ span {
 .save-btn{
   display: block;
   width: 88%;
+  max-width: 800px;
   background-color: #00A79D;
   border: none;
   color: #FFFFFF;
   margin: 15px auto;
   outline: none;
   padding: 9px;
+  font-family: 'Open Sans', sans-serif;
 }
 
 .save-btn:hover {
@@ -84,16 +87,29 @@ span {
   border-bottom: 2px #d1d3d4 solid;
   margin: 18px auto;
   width: 83%;
+  max-width: 800px;
 }
 
 .title {
   border: none;
   font-size: 25px;
+  color: #6d6e71;
 }
 
 .body{
   border: none;
   display: block;
+  width: 100%;
+  height: 55px;
+  resize: none;
+  color: #939598;
+}
+
+.quality {
+  color: #6d6e71;
+  padding-left: 7px;
+  position: relative;
+  bottom: 6px;
 }
 
 /******buttons******/
@@ -136,4 +152,14 @@ span {
 }
 .down-vote-btn:hover {
   background-image: url(../icons/downvote-hover.svg);
+}
+
+/******************
+    MEDIA QUERIES
+******************/
+
+@media (min-width: 750px) {
+  .body-user-input{
+    padding: 5px 0 4px 5px;
+  }
 }
